force-app/main/default/objects/Monthly_Budget__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <description
  >Presupuesto + arrastre − usado. Queda en el registro para el mes siguiente.</description>
    <formula>Budget_Amount__c + Rollover_In__c - Committed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>