force-app/main/default/objects/Monthly_Budget__c/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <label>Budget Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Currency</type>
</CustomField>