force-app/main/default/objects/Monthly_Budget__c/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Suma de las cuotas de este mes. Lo mantiene el trigger a partir de Expense_Installment__c.</description>
    <label>Committed</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>