force-app/main/default/objects/Monthly_Budget__c/fields/Month_Label__c.field-meta.xml
<CustomField>
    <fullName>Month_Label__c</fullName>
    <label>Month Label</label>
    <type>Text</type>
    <formula>CASE(MONTH(Month_Start__c),
1,&quot;Enero&quot;,2,&quot;Febrero&quot;,3,&quot;Marzo&quot;,4,&quot;Abril&quot;,5,&quot;Mayo&quot;,6,&quot;Junio&quot;,
7,&quot;Julio&quot;,8,&quot;Agosto&quot;,9,&quot;Septiembre&quot;,10,&quot;Octubre&quot;,11,&quot;Noviembre&quot;,12,&quot;Diciembre&quot;,&quot;&quot;)
&amp; &quot; &quot; &amp; TEXT(YEAR(Month_Start__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>