force-app/main/default/objects/Monthly_Budget__c/fields/Month_Start__c.field-meta.xml
<CustomField>
    <fullName>Month_Start__c</fullName>
    <label>Month Start</label>
    <description
  >Primer día del mes que representa este presupuesto (ej. 01/09/2026).</description>
    <required>true</required>
    <type>Date</type>
</CustomField>