force-app/main/default/objects/Monthly_Budget__c/fields/Rollover_In__c.field-meta.xml
<CustomField>
    <fullName>Rollover_In__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Disponible (o deuda) que arrastra el mes anterior. Lo escribe el trigger.</description>
    <label>Rollover In</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>