force-app/main/default/objects/Monthly_Budget__c/fields/Source_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Source_Email_Body__c</fullName>
    <label>Source Email Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>