force-app/main/default/objects/Monthly_Budget__c/fields/Source_Email_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Email_Processed_Date__c</fullName>
    <label>Source Email Processed Date</label>
    <type>DateTime</type>
</CustomField>