force-app/main/default/objects/Monthly_Budget__c/validationRules/Budget_Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Amount_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Budget_Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Budget_Amount__c</errorDisplayField>
    <errorMessage>El presupuesto no puede ser negativo.</errorMessage>
</ValidationRule>