force-app/main/default/objects/Monthly_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Month_Start__c</columns>
    <columns>Month_Label__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Source_Email_Processed_Date__c</columns>
</ListView>